--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 peewee==3.15.1
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
 Werkzeug==2.1.2
 zipp==3.8.1
